--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,6 +13,8 @@ resources.modules[] =
 
 autoloaderNamespaces.Twitter = "Twitter_"
 
+resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+
 [staging : production]
 
 [testing : production]
